# hw2

./: .gitignore  CMakeLists.txt  README.md  hw2.sln
include/: barrier.h  hw2.h  utilities.h
quicksort/: CMakeLists.txt  quicksort.cpp  quicksort.vcxproj  quicksort.vcxproj.filters
scan/: CMakeLists.txt  scan.cpp  scan.vcxproj  scan.vcxproj.filters
